--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "dependencies": {
     "laravel-mix": "^6.0.19"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "postcss": "8.1",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.34.0",
+    "sass-loader": "^11.0.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
